crates/aura-macros/tests/boundaries/service_surface_missing_select.stderr
error: service_surface requires `select = "..."`
  --> tests/boundaries/service_surface_missing_select.rs:3:1
   |
 3 | / #[service_surface(
 4 | |     families = "Establish",
 5 | |     object_categories = "authoritative_shared,transport_protocol",
 6 | |     discover = "descriptor_publication",
...  |
11 | |     category = "service_surface"
12 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `service_surface` (in Nightly builds, run with -Z macro-backtrace for more info)
